bin_PROGRAMS = multipartRoot

AM_CFLAGS = -fno-exceptions
AM_CFLAGS = -Os
AM_CFLAGS = -Wall -Wextra

AM_LDFLAGS =  -lpthread -ltrower-base64 -lmsgpackc -lcjson -lm -lrt
multipartRoot_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils 
multipartRoot_SOURCES = multipartRoot.c
